// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edges and add node itself should be removed after removing add node 1`] = `
Object {
  "edges": Array [],
  "nodes": Array [
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "CONSTANT",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [],
        "text": "c1",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "1",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "selected": false,
      "type": "custom",
      "width": 1,
    },
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "CONSTANT",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [],
        "text": "c2",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "2",
      "position": Object {
        "x": 200,
        "y": 200,
      },
      "selected": false,
      "type": "custom",
      "width": 1,
    },
  ],
}
`;

exports[`edges and sum node itself should be removed after removing sum node 1`] = `
Object {
  "edges": Array [],
  "nodes": Array [
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "CONSTANT",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [],
        "text": "c1",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "1",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "selected": false,
      "type": "custom",
      "width": 1,
    },
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "CONSTANT",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [],
        "text": "c2",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "2",
      "position": Object {
        "x": 200,
        "y": 200,
      },
      "selected": false,
      "type": "custom",
      "width": 1,
    },
  ],
}
`;

exports[`should have different node types on the graph after dropping nodes 1`] = `
Object {
  "edges": Array [],
  "nodes": Array [
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "CONSTANT",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [],
        "text": "c1",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "1",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "selected": false,
      "type": "custom",
      "width": 1,
    },
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "VARIABLE",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [
          Object {
            "labelParts": Array [
              Object {
                "href": "2",
                "id": "derivative",
                "latex": "\\\\displaystyle \\\\frac{\\\\partial{?}}{\\\\partial{2}}",
                "type": "latexLink",
              },
              Object {
                "id": "equal",
                "latex": "=",
                "type": "latex",
              },
            ],
            "type": "DERIVATIVE",
            "value": "0",
          },
        ],
        "text": "v2",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "2",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "selected": false,
      "type": "custom",
      "width": 1,
    },
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "OPERATION",
          "operationId": "sum",
        },
        "inputItems": Array [
          Object {
            "id": "x_i",
            "label": "x_i",
            "showHandle": true,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [
          Object {
            "labelParts": Array [
              Object {
                "id": "value",
                "latex": "=",
                "type": "latex",
              },
            ],
            "type": "VALUE",
            "value": "0",
          },
          Object {
            "labelParts": Array [
              Object {
                "href": "3",
                "id": "derivative",
                "latex": "\\\\displaystyle \\\\frac{\\\\partial{?}}{\\\\partial{3}}",
                "type": "latexLink",
              },
              Object {
                "id": "equal",
                "latex": "=",
                "type": "latex",
              },
            ],
            "type": "DERIVATIVE",
            "value": "0",
          },
        ],
        "text": "sum3",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "3",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "selected": true,
      "type": "custom",
      "width": 1,
    },
  ],
}
`;

exports[`should select the last dropped node 1`] = `
Object {
  "edges": Array [],
  "nodes": Array [
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "CONSTANT",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [],
        "text": "c1",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "1",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "selected": false,
      "type": "custom",
      "width": 1,
    },
    Object {
      "data": Object {
        "featureNodeType": Object {
          "nodeType": "CONSTANT",
        },
        "inputItems": Array [
          Object {
            "id": "value",
            "label": "=",
            "showHandle": false,
            "showInputField": true,
            "value": "0",
          },
        ],
        "isDarkMode": false,
        "isHighlighted": false,
        "outputItems": Array [],
        "text": "c2",
      },
      "dragHandle": ".drag-handle",
      "height": 1,
      "id": "2",
      "position": Object {
        "x": 100,
        "y": 100,
      },
      "selected": true,
      "type": "custom",
      "width": 1,
    },
  ],
}
`;
